[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Fundo" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 300.0
color = Color( 0.219608, 0.211765, 0.211765, 1 )

[node name="Start" type="Button" parent="."]
margin_left = 225.0
margin_top = 254.211
margin_right = 281.0
margin_bottom = 282.211
text = "Start"

[node name="Chute" type="Button" parent="."]
margin_left = 163.947
margin_top = 254.211
margin_right = 219.947
margin_bottom = 282.211
text = "Chute"

[node name="ChuteText" type="LineEdit" parent="."]
margin_left = 18.9474
margin_top = 194.474
margin_right = 150.947
margin_bottom = 220.474

[node name="Título" type="Label" parent="."]
margin_left = 96.5263
margin_top = 8.8421
margin_right = 213.526
margin_bottom = 39.8421
text = "Find The Number"
align = 1
valign = 1

[node name="Saída" type="Label" parent="."]
margin_left = 28.1053
margin_top = 149.895
margin_right = 145.105
margin_bottom = 180.895
align = 1
valign = 1

[node name="Vidas" type="Label" parent="."]
margin_left = 240.0
margin_top = 186.0
margin_right = 280.0
margin_bottom = 220.0

[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Chute" to="." method="_on_Chute_button_down"]
